Imported from https://2672535kl@github.com/2672535kl/spdk.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = spdk
+[access "refs/*"]
+	owner = group user/2672535kl
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/2672535kl
+	label-Verified = -1..+1 group user/2672535kl
+	push = group user/2672535kl
+	read = group user/2672535kl
+	rebase = group user/2672535kl
+	removeReviewer = group user/2672535kl
+	submit = group user/2672535kl
+[access "refs/heads/*"]
+	create = group user/2672535kl
+	push = +force group user/2672535kl
+	pushMerge = group user/2672535kl
+	read = group user/2672535kl
+[access "refs/tags/*"]
+	push = group user/2672535kl
+	push = +force group user/2672535kl
